(#3281) Fix file upload issues
Updated files can now be uploaded again.
Unrecognised file handling fixed in web front end.